--- a/source/_posts/瑶瑶公主语音大全.md
+++ b/source/_posts/瑶瑶公主语音大全.md
@@ -4,42 +4,23 @@ date: 2020-05-22 00:39:44
 tags: '瑶'
 ---
 
-> 啊，过去生于未来
-
-> 羁绊无影无踪，藤蔓一斩就断
-
-> 神在白天做梦，太阳从西边升起(两个语调)
-
-> 什么小鹿女呀，一定是世界上最不可爱的孩子吧。
-
-> 我读过书，我们云梦泽分成三块地方，有的擅长机关术，有的擅长造船术
-
-> 你为什么粘着我啊
-
-> 看，空气
-
-> 有的神住在天上，有的神住在蘑菇里
-
-> 要把萌藏在树叶里，不然梦会坏
-
-> 我们从玄微森林出来的人，一天要吃掉半个大陆呢
-
-> 昨晚我偷了你的翅膀在天上玩了一圈
-
-> 不是我，真的不是我
-
-> 别难过，我只是睡一觉
-
-> 别赖着人家好吗
-
-> 阿瑶为你痛哭
-
-> 我已经洗过脸了，真的
-
-> 狼来啦~
-
-> 你好，小蛇
-
-> 这是谁的小鹿，真厉害
-
-> 阿瑶也想成为像老师一样高大的人
+1. 啊，过去生于未来
+1. 羁绊无影无踪，藤蔓一斩就断
+1. 神在白天做梦，太阳从西边升起(两个语调)
+1. 什么小鹿女呀，一定是世界上最不可爱的孩子吧。
+1. 我读过书，我们云梦泽分成三块地方，有的擅长机关术，有的擅长造船术
+1. 你为什么粘着我啊
+1. 看，空气
+1. 有的神住在天上，有的神住在蘑菇里
+1. 要把萌藏在树叶里，不然梦会坏
+1. 我们从玄微森林出来的人，一天要吃掉半个大陆呢
+1. 昨晚我偷了你的翅膀在天上玩了一圈
+1. 不是我，真的不是我
+1. 别难过，我只是睡一觉
+1. 别赖着人家好吗
+1. 阿瑶为你痛哭
+1. 我已经洗过脸了，真的
+1. 狼来啦~
+1. 你好，小蛇
+1. 这是谁的小鹿，真厉害
+1. 阿瑶也想成为像老师一样高大的人
